fix: fix get name key when down key, add relationship between caps and shift

--- a/src/style/style.sass
+++ b/src/style/style.sass
@@ -1,10 +1,10 @@
 .content-box
   padding: 15px
   width: 100%
-  max-width: 550px
+  max-width: 750px
   margin: 0 auto
   margin-top: 50px
-  margin-bottom: 50px
+  margin-bottom: 20px
   border: 3px solid
   border-radius: 20px
  
@@ -13,11 +13,11 @@
   height: 220px
   overflow: auto
   display: block
+  max-width: 750px
   width: 100%
   border: 0
   outline: none
-  max-width: 550px
-  font-size: 21px
+  font-size: 25px
   word-break: break-word
 
 .keyboard__row + .keyboard__row
@@ -25,7 +25,7 @@
 
 .keyboard
   padding: 20px
-  max-width: 1040px
+  max-width: 1120px
   background-color: #000000
   width: 100%
   margin: 0 auto
@@ -60,6 +60,10 @@
 
 
 .keyboard__key_active
+  background-color: #119100
+  transition: background 0.5s
+
+.keyboard__key_on
   background-color: #119100
   transition: background 0.5s
 
